--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">I Love Board Games</string>
     <string name="onboarding_message">Welcome!\nPlease tell us your name</string>
+    <string name="Continue">Continue</string>
 </resources>
