--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">I Love Board Games</string>
     <string name="onboarding_message">Welcome!\nPlease tell us your name</string>
     <string name="Continue">Continue</string>
+    <string name="whats_your_name">What\'s your name?</string>
 </resources>
