--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="Alphabetical">Alphabetical</string>
     <string name="Ranking">Ranking</string>
     <string name="Year">Year</string>
+    <string name="Date">Date</string>
+    <string name="Position">Position</string>
 </resources>
